--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
             transform: translateY(-2px);
         }
     </style>
-    <!-- Update Supabase SDK import -->
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <!-- Update Supabase script to specific version -->
+    <script src="https://unpkg.com/@supabase/supabase-js@2.39.7/dist/umd/supabase.js"></script>
 </head>
 
 <body>
@@ -275,27 +275,35 @@
     </div>
 
     <script>
-        // Fix Supabase configuration
+        // Fix Supabase initialization
         const supabaseUrl = 'https://yeeumvbljvtbzdlllppg.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InllZXVtdmJsanZ0YnpkbGxscHBnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzg2OTA2MDEsImV4cCI6MjA1NDI2NjYwMX0.pjh-u84AxQmGpBavTRfLSaOHpaFig5PVvKy9niWmfuE';
-        const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-        // Add error handling to check connection
-        async function checkConnection() {
+        // Create Supabase client correctly
+        const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+        // Test connection immediately
+        async function testConnection() {
             try {
                 const {
                     data,
                     error
-                } = await supabase.from('birthday_cards').select('count');
-                if (error) throw error;
-                console.log('Successfully connected to Supabase');
+                } = await supabaseClient
+                    .from('birthday_cards')
+                    .select('count');
+
+                if (error) {
+                    console.error('Connection error:', error);
+                } else {
+                    console.log('Successfully connected to Supabase:', data);
+                }
             } catch (error) {
-                console.error('Error connecting to Supabase:', error);
+                console.error('Error:', error);
             }
         }
 
-        // Check connection when page loads
-        checkConnection();
+        // Run test on page load
+        testConnection();
 
         // Birthday messages array
         const birthdayMessages = [
@@ -328,7 +336,7 @@
 
         let cardId = null;
 
-        // Update the startCelebration function with better error handling
+        // Update startCelebration function to use supabaseClient
         async function startCelebration() {
             const name = document.querySelector('.name-input').value;
             if (!name) {
@@ -336,46 +344,47 @@
                 return;
             }
 
-            const imageFile = document.querySelector('#image-input').files[0];
-            const randomMessage = birthdayMessages[Math.floor(Math.random() * birthdayMessages.length)];
-
             try {
                 // Show loading state
-                document.querySelector('.submit-btn').disabled = true;
-                document.querySelector('.submit-btn').textContent = 'Creating...';
+                const submitBtn = document.querySelector('.submit-btn');
+                submitBtn.disabled = true;
+                submitBtn.textContent = 'Creating...';
+
+                const imageFile = document.querySelector('#image-input').files[0];
+                const randomMessage = birthdayMessages[Math.floor(Math.random() * birthdayMessages.length)];
 
                 // Upload image to Supabase Storage
                 let imageUrl = 'https://cdn-icons-png.flaticon.com/512/4140/4140048.png'; // Default image
+
                 if (imageFile) {
                     const fileName = `${Date.now()}-${imageFile.name}`;
+
+                    // Upload file
                     const {
-                        data,
-                        error
-                    } = await supabase.storage
+                        error: uploadError
+                    } = await supabaseClient.storage
                         .from('birthday-images')
                         .upload(fileName, imageFile);
 
-                    if (error) {
-                        throw new Error(`Error uploading image: ${error.message}`);
+                    if (uploadError) {
+                        throw new Error(`Upload error: ${uploadError.message}`);
                     }
 
-                    // Get public URL for the uploaded image
+                    // Get public URL
                     const {
-                        data: {
-                            publicUrl
-                        }
-                    } = supabase.storage
+                        data
+                    } = supabaseClient.storage
                         .from('birthday-images')
                         .getPublicUrl(fileName);
 
-                    imageUrl = publicUrl;
+                    imageUrl = data.publicUrl;
                 }
 
-                // Save card data to Supabase database
+                // Save to database
                 const {
                     data,
                     error
-                } = await supabase
+                } = await supabaseClient
                     .from('birthday_cards')
                     .insert([{
                         name: name,
@@ -386,7 +395,7 @@
                     .select();
 
                 if (error) {
-                    throw new Error(`Error saving card data: ${error.message}`);
+                    throw new Error(`Database error: ${error.message}`);
                 }
 
                 cardId = data[0].id;
@@ -399,7 +408,7 @@
 
                 createFireworks();
 
-                // Change message and show image with animation after 5 seconds
+                // Show final message and image
                 setTimeout(() => {
                     messageEl.textContent = randomMessage;
                     const personImage = document.getElementById('person-image');
@@ -409,12 +418,13 @@
                 }, 5000);
 
             } catch (error) {
-                console.error("Error creating card:", error);
-                alert(`Error creating card: ${error.message}`);
+                console.error("Error:", error);
+                alert(error.message);
             } finally {
-                // Reset button state
-                document.querySelector('.submit-btn').disabled = false;
-                document.querySelector('.submit-btn').textContent = 'Celebrate!';
+                // Reset button
+                const submitBtn = document.querySelector('.submit-btn');
+                submitBtn.disabled = false;
+                submitBtn.textContent = 'Celebrate!';
             }
         }
 
